# PelitaRunner

./: pelita-runner.cabal  pelita-runner.hs
src-lib/: ConfigReader.hs  PelitaRunner.hs
