name:            pelita-runner
build-type:      Simple
cabal-version:   >= 1.8
version:         0.1

library
  exposed-modules: PelitaRunner, ConfigReader
  hs-source-dirs:  src-lib
  build-depends:   base, zeromq4-haskell, array, aeson, vector, containers, unordered-containers, bytestring, mtl, yaml, random-extras, random-source, random-fu, text, text-format, PSQueue

executable pelita-runner
  build-depends:   pelita-runner, base, random, comonad, mtl
  Main-Is:         pelita-runner.hs
